--- a/release-please-config.json
+++ b/release-please-config.json
@@ -6,8 +6,12 @@
       "bump-minor-pre-major": false,
       "bump-patch-for-minor-pre-major": false,
       "draft": false,
-      "prerelease": false
+      "prerelease": false,
+      "pull-request-title-pattern": "chore: :bookmark: release${component} ${version}"
     }
   },
+  "extra-files": [
+    "composeApp/build.gradle.kts"
+  ],
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json"
 }
