--- a/.github/workflows/firebase-app-distribution.yml
+++ b/.github/workflows/firebase-app-distribution.yml
@@ -36,6 +36,6 @@ jobs:
         with:
           appId: io.github.kevinah95
           serviceCredentialsFileContent: ${{ secrets.FIREBASE_CREDENTIAL_FILE_CONTENT }}
-          testers: kevinah95@gmail.com
-          file: composeApp/build/outputs/apk/release/composeApp-release-unsigned.apk
+          testers: "kevinah95@gmail.com"
+          file: ./composeApp/build/outputs/apk/release/composeApp-release-unsigned.apk
           releaseNotes: ${{ github.event.inputs.release_notes || format('Release {0}', github.event.release.tag_name) }}
