--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -38,7 +38,7 @@ jobs:
         if: ${{ steps.release.outputs.release_created }}
         uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
-          appId: io.github.kevinah95
+          appId: ${{ secrets.FIREBASE_APP_ID }}
           serviceCredentialsFileContent: ${{ secrets.FIREBASE_CREDENTIAL_FILE_CONTENT }}
           testers: "kevinah95@gmail.com"
           file: ./composeApp/build/outputs/apk/release/composeApp-release-unsigned.apk
